--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="address-link active" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -167,7 +167,7 @@
                             <source srcset="
                     ./images/team/Mark_Guerrero.jpg     1x,
                     ./images/team/Mark_Guerrero-@2x.jpg 2x
-                  " media="(min-width: 1158px)" />
+                  " />
                             <img width="264" class="team-member" src="images/team/Mark_Guerrero.jpg"
                                 alt="Mark_Guerrero" />
                         </picture>
@@ -210,7 +210,7 @@
                             <source srcset="
                     ./images/team/Tom_Ford.jpg     1x,
                     ./images/team/Tom_Ford-@2x.jpg 2x
-                  " media="(min-width: 1158px)" />
+                  " />
                             <img width="264" class="team-member" src="images/team/Tom_Ford.jpg" alt="Tom_Ford" />
                         </picture>
                         <div class="team-photo-name">
@@ -252,7 +252,7 @@
                             <source srcset="
                     ./images/team/Camila_Garcia.jpg     1x,
                     ./images/team/Camila_Garcia-@2x.jpg 2x
-                  " media="(min-width: 1158px)" />
+                  " />
                             <img width="264" class="team-member" src="images/team/Camila_Garcia.jpg"
                                 alt="Camila_Garcia" />
                         </picture>
@@ -295,7 +295,7 @@
                             <source srcset="
                     ./images/team/Daniel_Wilson.jpg     1x,
                     ./images/team/Daniel_Wilson-@2x.jpg 2x
-                  " media="(min-width: 1158px)" />
+                  " />
                             <img width="264" class="team-member" src="images/team/Daniel_Wilson.jpg"
                                 alt="Daniel_Wilson" />
                         </picture>
@@ -345,10 +345,21 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/banking-app-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/banking-app.jpg 1x" media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/banking-app-mob.jpg" media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/banking-app-pc.jpg     1x,
+                      ./images/portfolio/banking-app-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/banking-app-tab.jpg     1x,
+                      ./images/portfolio/banking-app-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/banking-app-mob.jpg     1x,
+                      ./images/portfolio/banking-app-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/banking-app-mob.jpg" class="port-photo" width="360"
                                     alt="banking-app" />
                             </picture>
@@ -366,14 +377,23 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/cashless-payment-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/cashless-payment.jpg 1x"
-                                    media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/cashless-payment-mob.jpg"
-                                    media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/cashless-payment-pc.jpg     1x,
+                      ./images/portfolio/cashless-payment-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/cashless-payment-tab.jpg     1x,
+                      ./images/portfolio/cashless-payment-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/cashless-payment-mob.jpg     1x,
+                      ./images/portfolio/cashless-payment-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/cashless-payment-mob.jpg" class="port-photo" width="360"
-                                    alt="cashless-payment" />
+                                    alt="banking-app" />
                             </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
@@ -390,12 +410,23 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/meditation-app-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/meditation-app.jpg 1x" media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/meditation-app-mob.jpg" media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/meditation-app-pc.jpg     1x,
+                      ./images/portfolio/meditation-app-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/meditation-app-tab.jpg     1x,
+                      ./images/portfolio/meditation-app-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/meditation-app-mob.jpg     1x,
+                      ./images/portfolio/meditation-app-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/meditation-app-mob.jpg" class="port-photo" width="360"
-                                    alt="meditation-app" />
+                                    alt="banking-app" />
                             </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
@@ -411,12 +442,23 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/taxi-service-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/taxi-service.jpg 1x" media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/taxi-service-mob.jpg" media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/taxi-service-pc.jpg     1x,
+                      ./images/portfolio/taxi-service-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/taxi-service-tab.jpg     1x,
+                      ./images/portfolio/taxi-service-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/taxi-service-mob.jpg     1x,
+                      ./images/portfolio/taxi-service-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/taxi-service-mob.jpg" class="port-photo" width="360"
-                                    alt="taxi-service" />
+                                    alt="banking-app" />
                             </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
@@ -433,14 +475,23 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/screen-illustrations-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/screen-illustrations.jpg 1x"
-                                    media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/screen-illustrations-mob.jpg"
-                                    media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/screen-illustrations-pc.jpg     1x,
+                      ./images/portfolio/screen-illustrations-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/screen-illustrations-tab.jpg     1x,
+                      ./images/portfolio/screen-illustrations-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/screen-illustrations-mob.jpg     1x,
+                      ./images/portfolio/screen-illustrations-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/screen-illustrations-mob.jpg" class="port-photo"
-                                    width="360" alt="screen-illustrations" />
+                                    width="360" alt="banking-app" />
                             </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
@@ -457,12 +508,23 @@
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
                             <picture>
-                                <source srcset="./images/portfolio/online-courses-@2x.jpg 2x"
-                                    media="(min-width: 1158px)" />
-                                <source srcset="./images/portfolio/online-courses.jpg 1x" media="(min-width: 768px)" />
-                                <source srcset="./images/portfolio/online-courses-mob.jpg" media="(max-width: 767px)" />
+                                <source srcset="
+                      ./images/portfolio/online-courses-pc.jpg     1x,
+                      ./images/portfolio/online-courses-pc-@2x.jpg 2x
+                    " media="(min-width: 1158px)" />
+
+                                <source srcset="
+                      ./images/portfolio/online-courses-tab.jpg     1x,
+                      ./images/portfolio/online-courses-tab-@2x.jpg 2x
+                    " media="(min-width: 768px)" />
+
+                                <source srcset="
+                      ./images/portfolio/online-courses-mob.jpg     1x,
+                      ./images/portfolio/online-courses-mob-@2x.jpg 2x
+                    " media="(max-width: 767px)" />
+
                                 <img src="./images/portfolio/online-courses-mob.jpg" class="port-photo" width="360"
-                                    alt="online-courses" />
+                                    alt="banking-app" />
                             </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
