letter-spacing: 0.02em;

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                         </div>
                         <h3 class="descr-title">Diligence</h3>
                         <p class="descr-text">
-                            Research and confirm brands that present the strongest digital
-                            growth opportunities and minimize risk.
+                            Research and confirm brands with the strongest digital growth opportunities and minimize
+                            risk.
                         </p>
                     </li>
                     <li class="descr-item">
